# btc-regime-reproducer

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: local_btc_binance_2021_2026.yaml  local_btc_binance_smoke_2024.yaml  paper_btcusd_csv_template.yaml  paper_like_btcusd_2012_2021.yaml
scripts/: compare_models.py  prepare_btc_data.py  render_run_overlays.py  run_regime_reproduction.py  tune_paper_tables.py
src/btc_regime_repro/: __init__.py  clustering.py  config.py  dataset.py  features.py  hmm_model.py  io_utils.py  paper_targets.py  pipeline.py  plots.py  reporting.py  types.py
tests/: test_config.py  test_dataset.py  test_features.py  test_modeling.py  test_pipeline.py
