[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-regime-repro"
version = "0.1.0"
description = "Research reproduction pipeline for BTC regime detection with K-Means and HMM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=14.0.0",
  "PyYAML>=6.0.0",
  "scikit-learn>=1.4.0",
  "hmmlearn>=0.3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
